# SFML_projects

./: CMakeLists.txt
headers/: Board.h  Engine.h
src/: Board.cpp  main.cpp
